Exercise finished(Refactor post layout: flexbox  cleanup, spacing fixes and stable image sizing) )

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 body{
     background-color: rgb(52, 60, 110);
     width: 100%;
-    height:100%;
     display:flex;
     justify-content: center;
     align-items:center;
@@ -13,7 +12,7 @@ body{
     justify-content: center;
     align-items:center;
     width: 45rem;
-    height: 45rem;
+    height: 50rem;
 
 }
 
@@ -22,30 +21,58 @@ body{
     flex-direction:column;
     background-color:white;
     width: 23rem;
-    height: 35rem;
-    border-radius:3%;
+    height: 32rem;
+    border-radius:2%;
+    
     
 
 }
-
+/* Distribuimos el header con space:between*/
 .header{
     display:flex;
     justify-content: space-between;
-    width: 23rem;
-    height:2.5rem;
-    background:rgb(255, 255, 255);
+    padding:0.5rem;
+    align-items:center;
+   
     border-radius:3%;
 }
 
+
 .iconosHeaderIzq{
     display:flex;
-    padding:1px;
+    align-items:center;
+    
+}
+/*Icono Html*/
+.fa-html5{
+    font-size:2rem;
+}
+
+.username{
+    display:flex;
+    flex-direction:column;
+}
+/*Importante:quitamos margenes por defecto de <p>*/
+ p{
+    margin:0;
 }
 .iconosHeaderDcha{
     display:flex;
     flex-direction: column;
+    gap:0.20rem
+}
+/* elipsis */
+.fa-circle{
+    font-size: 0.5rem;
     
 }
+/*configuramos limites de la imagen*/
+.imgSection{
+    width:100%;
+    height:16rem;
+    overflow:hidden
+}
+/*Ajustamos para que ocupe dichos limites*/
 .imgSection img{
     width:100%;
     height:100%;
@@ -55,9 +82,14 @@ body{
 .footer{
     display:flex;
     flex-direction: column;
-    width:23rem;
-    height:15rem;
-    padding:1rem;
+    height:18rem;
+    justify-content:space-around;
+    padding:0.8rem;
+    
+}
+
+.footer p{
+    font-size:0.95rem;
 }
 
 .iconosFooter{
@@ -68,5 +100,29 @@ body{
 
 .iconosFooterIzq{
     display:flex;
+    
+}
+/*Corazón*/
+.fa-heart{
+    font-size:1.9rem;
+}
+/*Comment*/
+.fa-comment{
+    font-size:1.9rem;
+}
+/*Compartir*/
+.fa-share{
+    font-size:1.9rem;
+}
+/*Save*/
+.fa-bookmark{
+    font-size:1.9rem;
+}
+
+.text{
+    display:flex;
+    flex-direction:column;
+    
+    
     
 }
